--- a/project_template/staticfiles/src/myapps/cars/templates/home.html
+++ b/project_template/staticfiles/src/myapps/cars/templates/home.html
@@ -128,7 +128,7 @@
         </md-not-found>
       </md-autocomplete>
       <br/>
-      <md-button class="md-raised md-primary" ng-click="vm.searchVariant(vm.selectedBrand.name, vm.selectedModel.name)" ng-disabled="carSearchForm.$invalid || carSearchForm.$pristine">Search</md-button>
+      <md-button class="md-raised md-primary" ng-click="vm.carReviewDialog($event)" ng-disabled="carSearchForm.$invalid || carSearchForm.$pristine">Search</md-button>
       </section>
     </form>
   </md-content>
@@ -146,10 +146,17 @@
             </div>
             <div class="col-md-4">
                 <img src="static/media/cars/5824.jpg" width="100%">
-                <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p> 
+                <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum {{vm.cars | json}}</p> 
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-4" ng-repeat="car in vm.newCars">
+                {{car.name}}
+                <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+            </div>
+            <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+        </div>
     </div>
 
   
