add review option added

--- a/project_template/staticfiles/src/myapps/cars/templates/home.html
+++ b/project_template/staticfiles/src/myapps/cars/templates/home.html
@@ -134,7 +134,7 @@
   </md-content>
 </div>
 
-    <div>
+    <div style="padding : 10px">
 
         <div class="row">
             <div ng-click="vm.carReviewDialog($event, car)" class="col-md-4" ng-repeat="car in newCars">
